test/corpus/expressions.txt
====================
Empty Expression
====================

{{}}
{{   }}

---

(template
  (content)
  (expression)
  (content)
  (expression)
  (content))

====================
String Expression
====================

{{ "" }}
{{ "Hello World" }}
{{ 'Hello World' }}
{{ "Escape \n\r\\\"\'\t\b\f'" }}

---

(template
  (content)
  (expression
    (string
      (string_start)
      (string_end)))
  (content)
  (expression
    (string
      (string_start)
      (string_content)
      (string_end)))
  (content)
  (expression
    (string
      (string_start)
      (string_content)
      (string_end)))
  (content)
  (expression
    (string
      (string_start)
      (string_content
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)
        (escape_sequence))
      (string_end)))
  (content))

====================
Integer Expression
====================

{{ 42 }}
{{ -123 }}
{{ 12_323 }}

---

(template
  (content)
  (expression
    (integer))
  (content)
  (expression
    (unary_operator
      argument: (integer)))
  (content)
  (expression
    (ERROR
      (integer))
    (identifier))
  (content))

====================
Float Expression
====================

{{ 42.23 }}
{{ -42.23 }}

---

(template
  (content)
  (expression
    (float))
  (content)
  (expression
    (unary_operator
      argument: (float)))
  (content))

====================
List Expression
====================

{{ [] }}
{{ [1, 2, 3, 4, 5] }}
{{ ['list', 'of', 'objects'] }}

---

(template
  (content)
  (expression
    (list))
  (content)
  (expression
    (list
      (integer)
      (integer)
      (integer)
      (integer)
      (integer)))
  (content)
  (expression
    (list
      (string
        (string_start)
        (string_content)
        (string_end))
      (string
        (string_start)
        (string_content)
        (string_end))
      (string
        (string_start)
        (string_content)
        (string_end))))
  (content))

====================
Tuple Expression
====================

{{ () }}
{{ (1, 2, 3, 4, 5) }}
{{ ('tuple', 'of', 'values') }}

---

(template
  (content)
  (expression
    (tuple))
  (content)
  (expression
    (tuple
      (integer)
      (integer)
      (integer)
      (integer)
      (integer)))
  (content)
  (expression
    (tuple
      (string
        (string_start)
        (string_content)
        (string_end))
      (string
        (string_start)
        (string_content)
        (string_end))
      (string
        (string_start)
        (string_content)
        (string_end))))
  (content))

====================
Dictionary Expression
====================

{{ {} }}
{{ {'dict': 'of'} }}
{{ {"dict": "of", "key": "and", "value": "pairs"} }}

---

(template
  (content)
  (expression
    (dictionary))
  (content)
  (expression
    (dictionary
      (pair
        key: (string
          (string_start)
          (string_content)
          (string_end))
        value: (string
          (string_start)
          (string_content)
          (string_end)))))
  (content)
  (expression
    (dictionary
      (pair
        key: (string
          (string_start)
          (string_content)
          (string_end))
        value: (string
          (string_start)
          (string_content)
          (string_end)))
      (pair
        key: (string
          (string_start)
          (string_content)
          (string_end))
        value: (string
          (string_start)
          (string_content)
          (string_end)))
      (pair
        key: (string
          (string_start)
          (string_content)
          (string_end))
        value: (string
          (string_start)
          (string_content)
          (string_end)))))
  (content))

====================
Boolean Expression
====================

{{ true }}
{{ false }}

---

(template
  (content)
  (expression
    (true))
  (content)
  (expression
    (false))
  (content))

====================
Tilde Expression
====================

{{ "Hello " ~ name ~ "!" }}

---

(template
  (content)
  (expression
    (binary_operator
      left: (binary_operator
        left: (string
          (string_start)
          (string_content)
          (string_end))
        right: (identifier))
      right: (string
        (string_start)
        (string_content)
        (string_end))))
  (content))

====================
Conditional Expression
====================

{{ 'string' if layout_template is defined else 'default.html' }}

---

(template
  (content)
  (expression
    (conditional_expression
      (string
        (string_start)
        (string_content)
        (string_end))
      (comparison_operator
        (identifier)
        (identifier))
      (string
        (string_start)
        (string_content)
        (string_end))))
  (content))
